lanecwe-Prod/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_File__c</fullName>
        <label>Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_ID__c</fullName>
        <description>**Cretead for Cases object migrated from LW</description>
        <label>x-Status ID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor_New__c</fullName>
        <formula>Owner_Copy__r.Manager.FirstName +&quot; &quot;+ Owner_Copy__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>Defaults to Owner&apos;s Managers name and Read only Field.</description>
        <label>Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_to_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used in the Eloqua integration to determine if we want to sync a contact record to the Eloqua database.</description>
        <label>Sync to Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Territory Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tesla_Region__c</fullName>
        <description>1st Round Moderator Integration 12/11/2013</description>
        <label>Tesla Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case_1__c</fullName>
        <label>Use Case #1</label>
        <picklist>
            <picklistValues>
                <fullName>Brainstorming sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client service reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer meetings / product demos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer service / trouble shooting sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Training &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Training &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New product launches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New starter onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; D activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote team member meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine internal communications (e.g. team meetings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales / contract negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town hall meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case_2__c</fullName>
        <label>Use Case #2</label>
        <picklist>
            <picklistValues>
                <fullName>Brainstorming sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client service reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer meetings / product demos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer service / trouble shooting sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Training &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Training &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New product launches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New starter onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; D activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote team member meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine internal communications (e.g. team meetings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales / contract negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town hall meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case_3__c</fullName>
        <label>Use Case #3+</label>
        <picklist>
            <picklistValues>
                <fullName>Brainstorming sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client service reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer meetings / product demos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust. service/troubleshooting sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Training &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Training &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New product launches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New starter onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; D activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote team member meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine internal communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales / contract negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town hall meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use_Case_Other_Details__c</fullName>
        <inlineHelpText>Required to input details of what Other Use Case is presented</inlineHelpText>
        <label>Use Case Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verified_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wallet_card_inclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wallet card inclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <label>Wave</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_Source__c</fullName>
        <label>Z-Source</label>
        <picklist>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesgateway</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>con_RW_Approval_Status__c</fullName>
        <label>PC Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>contact_external_id__c</fullName>
        <externalId>true</externalId>
        <label>contact_external_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hubspotscore__c</fullName>
        <inlineHelpText>The score set by marketing for a particular lead based on its marketing activities, etc.  The higher the score the better</inlineHelpText>
        <label>Contact Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is1__Chat_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is1__Mail_ID__c</fullName>
        <externalId>true</externalId>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>iv__InsideView_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsideView Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_Date_Last_Updated__c</fullName>
        <label>InsideView Date Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_User_Last_Updated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsideView User Last Updated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lead_external_id__c</fullName>
        <externalId>true</externalId>
        <label>lead_external_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tt_itda_watch__Tech_Target_Import_Timestamp__c</fullName>
        <description>A timestamp provided when Tech Target adds a Contact.</description>
        <inlineHelpText>A timestamp provided when Tech Target adds a Contact.</inlineHelpText>
        <label>Tech Target Import Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_C_Owner_A_Owner__c</fullName>
        <formula>IF(
 Account.OwnerId &lt;&gt;  OwnerId, &quot;Yes&quot;,
IF(
 Account.OwnerId =  OwnerId, &quot;No&quot;, &quot;Error in Formula&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-C.Owner &lt;&gt; A.Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_Nurture_TimeStamp__c</fullName>
        <description>Houses the Timestamp if passed from a lead.  No current process designed for contacts/opps</description>
        <label>z-Nurture TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>EMEA_ALL_BOOKERS</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Role__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Booker</value>
        </filters>
        <label>EMEA : ALL BOOKERS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_EVENT_MANAGEMENT_TEAM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Attended_Bookers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>contains</operation>
            <value>Booker</value>
        </filters>
        <label>EMEA - Attended Bookers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_ADM_Pre_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Hunters_Sub_500</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Department__c</columns>
        <columns>Decision_Making_Authority__c</columns>
        <columns>Inactive__c</columns>
        <columns>Key_Contact__c</columns>
        <columns>Role__c</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA : Hunters Sub $500</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_ADM_Pre_Sales</roleAndSubordinates>
            <roleAndSubordinates>EMEA_EMEA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_CW500_Event</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:CW500 Event</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_CW500_Finance_Event</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:CW500 Finance Event</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Content_Syndication</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:Content_Syndication</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Gartner_Berlin_Cold_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:Gartner_Berlin_Cold Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Gartner_Berlin_Warm_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:Gartner_Berlin_Warm Contact</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_LinkedIn_Non_Conversion_Rema</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE LinkedIn Non-Conversion Rema</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Linkedin</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:Linkedin</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Presentation_Book</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE Presentation Book</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Print_Adverts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE Print Adverts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_WH_Breakthrough</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE:WH Breakthrough</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Webinar_Email_Master</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE Webinar_Email Master</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_UK_SAE_Webinar_Email_Promo1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>EMEA:UK:SAE Webinar_Email Promo1</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_Global</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>Opportunity_00N30000008nuBZEAY</fullName>
        <active>false</active>
        <field>Opportunity.Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>If you do not see a match please go in and add a contact to the account related to this opportunity.</infoMessage>
        <isOptional>true</isOptional>
        <name>Opportunity_Billing Contact</name>
        <sourceObject>Opportunity</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Quote_00Ne0000000GCdjEAG</fullName>
        <active>false</active>
        <field>Quote.Billing_Contact__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Quote_Billing Contact</name>
        <sourceObject>Quote</sourceObject>
    </namedFilters>
    <validationRules>
        <fullName>AccountRequired</fullName>
        <active>false</active>
        <description>Account is required on contact.  Used to prevent data loads from creating orphan contacts.  **DO NOT ever add the override validation rule**</description>
        <errorConditionFormula>IF(AccountId ==NULL,true,false)

/* DO NOT ever add the override validation rule*/</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Account is required. Click on the hour glass to find the right customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CON001_Cant_be_sub_agent_if_Prim_Contact</fullName>
        <active>true</active>
        <description>PC Primary Contact should not be able to be selected if the Account’s channel Type is “Sub Agent”</description>
        <errorConditionFormula>AND(
ISPICKVAL(Account.ChannelType__c, &quot;Sub Agent&quot;),
Partner_Connect_Admin__c = True
)</errorConditionFormula>
        <errorDisplayField>Partner_Connect_Admin__c</errorDisplayField>
        <errorMessage>The Primary Contact cannot be selected when the Account&apos;s Channel Type value is Sub Agent.  [Error: CON001]</errorMessage>
    </validationRules>
</CustomObject>